# artifact_cav2021

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  bench_run.py  bench_run_aeon.py  bench_run_aeon_basic.py  bench_run_aeon_basic_random_wide.py  bench_run_aeon_random.py  bench_run_aeon_random_sequential.py  bench_run_aeon_random_sequential_wide.py  bench_run_aeon_random_wide.py  bench_run_aeon_sequential.py  bench_run_cabean.py  bench_run_cabean_random.py  env_test.py
benchmarks_random/: 100_1057_4826.aeon  100_328_705.aeon  100_328_705.bnet  100_328_705.ispl  10_1039_3683.aeon  10_984_3346.aeon  10_984_3346.ispl  10_988_4547.bnet  10_988_4547.ispl  11_1003_4597.aeon  11_1003_4597.bnet  11_1057_5147.aeon  11_802_3695.aeon  11_802_3695.bnet  11_802_3695.ispl  12_1056_4836.aeon  12_592_1539.bnet  12_592_1539.ispl  12_991_4591.aeon  12_991_4591.bnet  12_991_4591.ispl  13_1002_4605.aeon  13_1051_5333.aeon  13_513_1571.bnet  13_513_1571.ispl  14_1022_3113.aeon  14_462_2125.aeon  14_462_2125.bnet  14_462_2125.ispl  14_983_3282.aeon  15_1056_4518.aeon  15_620_1268.bnet  15_620_1268.ispl  15_995_4157.bnet  16_1030_3684.aeon  16_884_4040.bnet  16_884_4040.ispl  16_998_4601.aeon  17_1002_4791.aeon  17_1054_4814.aeon  (+428 more)
benchmarks_random_1000/: 100_1012_4617.aeon  100_1012_4617.bnet  10_984_3346.bnet  13_1002_4605.bnet  14_983_3282.bnet  14_983_3282.ispl  15_995_4157.aeon  16_998_4601.bnet  17_1002_4791.bnet  19_1002_4345.bnet  1_997_4586.aeon  20_1007_4801.aeon  20_1007_4801.bnet  22_1002_4180.aeon  22_1002_4180.bnet  24_1009_5086.aeon  24_1009_5086.bnet  (+109 more)
src/: lib.rs  (+6 more)
(+1274 files in other folders)
