[package]
name = "cav2021-artifact"
version = "1.0.0-SNAPSHOT"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
edition = "2018"

[profile.release]
# This is important for profiling - otherwise we would get unreadable traces.
#debug = true
# This gives a marginally better runtime, but a much much longer compile time. Disabled by default.
#lto = true

[dependencies]
biodivine-lib-bdd = "0.4.2"
biodivine-lib-param-bn = "0.4.3"
rand = "0.8.1"

[features]
default = []

log_progress = []